--- a/beIDOL/style.css
+++ b/beIDOL/style.css
@@ -111,7 +111,7 @@ pre {
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
   }
   
-  button:hover {
+  /* button:hover {
     background-color: #7c68ee91;
-  }
+  } */
   
