--- a/beIDOL/style.css
+++ b/beIDOL/style.css
@@ -2,6 +2,7 @@ body {
     margin: 0;
     font-family: 'Noto Sans KR', sans-serif;
     font-size: 16px;
+    overflow: hidden
   }
 
 pre {
@@ -10,7 +11,7 @@ pre {
 }
   
   #chat-container {
-    max-width: 600px;
+    max-width: 100vw;
     margin: 0 auto;
     padding: 20px;
     height: 90vh;
