--- a/beIDOL/style.css
+++ b/beIDOL/style.css
@@ -8,6 +8,8 @@ body {
 pre {
     font-family: 'Noto Sans KR', sans-serif;
     font-size: 16px;
+    white-space: pre-wrap;
+    text-align: left;
 }
   
   #chat-container {
@@ -18,6 +20,7 @@ pre {
     display: flex;
     flex-direction: column;
     background-color: #c7c4c4; /* 배경색 지정 */
+    /* position: absolute; 절대 위치 지정 */
   }
   
   #chat-history {
