--- a/beIDOL/style.css
+++ b/beIDOL/style.css
@@ -19,7 +19,9 @@ pre {
   #chat-container {
     max-width: 100vw;
     margin: 0 auto;
-    padding: 20px;
+    padding-right: 10px;
+    padding-left: 10px;
+    padding-bottom: 20px;
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -50,7 +52,7 @@ pre {
     padding: 10px;
     max-width: 70%;
     color: white;
-    text-align: right;
+    text-align: left;
   }
 
   .bot-message-container {
@@ -59,20 +61,39 @@ pre {
     margin-bottom: 10px;
   }
 
+  .bot-text {
+    display: flex;
+    flex-direction: column; /* set flex-direction to column */
+    justify-content: flex-start;
+    padding-left: 5px;
+    max-width: 65%;
+  }
+
   .bot-message-bubble {
     background-color: #e2e2e2;
     border-radius: 20px;
     padding: 10px;
-    max-width: 70%;
+    max-width: 100%;
     color: black;
     text-align: left;
+    margin-top: 5px; /* add margin-top to create space between name and message */
+
   }
   
-  .bot-message-bubble {
-    background-color: #F0F0F0;
-    border-radius: 20px;
-    padding: 10px;
-    max-width: 70%;
+  .bot-profile-image {
+    width: 35px;
+    height: 35px;
+    background-color: #e2e2e2;
+    border-radius: 50%;
+  }
+
+  .bot-profile-name {
+    margin: 5px 0 0 0;
+    font-size: 12px;
+    color: rgb(0, 0, 0);
+    align-self: flex-start;
+    padding-left: 1%;
+    padding-right: 1%;
   }
   
   .message-text {
